<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.h1.MainActivity">

    <ImageView
        android:id="@+id/im_car"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/page_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/regular"
        android:text="@string/hello_there_n_wellcome_back"
        android:textColor="@color/black"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_car" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_Input_Layout"
        style="@style/Text_Input_Layout"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_Input_Edit_Text"
            style="@style/Text_Input_EditText"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_Input_Layout"
        style="@style/Text_Input_Layout"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@+id/username_Input_Layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_Input_Edit_Text"
            style="@style/Text_Input_EditText"
            android:inputType="numberPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin_2x"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_Input_Layout" />

    <Button
        android:id="@+id/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_margin"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:backgroundTint="@color/black"
        android:paddingVertical="12dp"
        android:padding="@dimen/page_margin"
        android:text="@string/go"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_margin"
        android:text="@string/new_user_sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go" />

</androidx.constraintlayout.widget.ConstraintLayout>