<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.h1.SecondActivity">


    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/rounded"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_marginTop="@dimen/page_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/edit_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_margin"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_photo"
        android:textColor="@color/purple_500"
        android:textSize="26dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_photo"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:layout_marginHorizontal="@dimen/page_margin_2x"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:layout_marginHorizontal="@dimen/page_margin_2x"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/surname"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/privat_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:layout_marginHorizontal="@dimen/page_margin_2x"
        android:text="@string/private_information"
        android:textSize="@dimen/page_margin"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        app:startIconDrawable="@drawable/ic_baseline_mail_24"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privat_info"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:layout_marginHorizontal="@dimen/page_margin_2x"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_Input_EditText_second_activity"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number"
        android:layout_width="0dp"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:layout_marginHorizontal="@dimen/page_margin_2x"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="match_parent"
            android:hint="@string/number"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pasword"
        android:layout_width="0dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number"
        android:layout_marginTop="@dimen/page_margin_2x"
        android:layout_marginHorizontal="@dimen/page_margin_2x"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_Input_EditText_second_activity"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>